--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+/* 전역 기본설정 */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,14 +9,17 @@ ul {
   list-style: none;
 }
 
+/* NavSidebar */
 nav {
   width: 100vw;
   height: 50px;
   background-color: grey;
 }
 
-.bodyContainer {
-  max-width: 1280px;
+/* App */
+.mainContainer {
+  min-width: 1270px;
+  max-width: 1270px;
   display: flex;
   flex-direction: row;
 }
@@ -27,7 +31,16 @@ nav {
   flex-direction: column;
 }
 
-.appSection {
-  width: 800px;
+/* pages */
+.withSidebar {
+  min-width: 640px;
+  max-width: 1100px;
+}
+
+.mainSection {
+  background-color: bisque;
   height: auto;
+  width: auto;
+  display: flex;
+  flex-direction: row;
 }
