--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,15 +10,11 @@ ul {
 }
 
 /* App */
-.mainContainer {
-  min-width: 1270px;
-  max-width: 1270px;
-  display: flex;
-  flex-direction: row;
-}
-
 .appContainer {
-  min-height: 100vh;
+  width: 1270px;
+  min-width: 640px;
+  max-width: 100vw;
+  height: 100vh;
   background-color: aqua;
   display: flex;
   flex-direction: column;
@@ -27,11 +23,14 @@ ul {
 /* pages */
 .withSidebar {
   min-width: 640px;
+  width: 1100px;
   max-width: 1100px;
+  background-color: rgba(123, 0, 255, 0.536);
 }
 
 .mainSection {
-  background-color: bisque;
+  background-color: rgba(0, 0, 255, 0.47);  
+  width: 1100px;
   height: auto;
   width: auto;
   display: flex;
