--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,19 +21,12 @@ ul {
 }
 
 /* pages */
-.withSidebar {
-  min-width: 640px;
-  width: 1100px;
-  max-width: 1100px;
-  background-color: rgba(123, 0, 255, 0.536);
-}
-
 .mainSection {
   background-color: rgba(0, 0, 255, 0.47);  
   width: 1270px;
-  height: auto;
   display: flex;
   flex-direction: row;
+  padding: 30px 0px
 }
 
 a:link,
