--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,34 +9,7 @@ ul {
   list-style: none;
 }
 
-/* App */
-.appContainer {
-  width: 1270px;
-  min-width: 640px;
-  max-width: 100vw;
-  height: 100vh;
-  background-color: aqua;
-  display: flex;
-  flex-direction: column;
-}
-
-/* pages */
-.mainSection {
-  background-color: #F1F2F3;  
-  width: 1270px;
-  display: flex;
-  flex-direction: row;
-  padding: 30px 0px
-}
-
-.withSidebar {
-  background-color: #F1F2F3;  
-  width: 1270px;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 0px
-}
-
+/* a, Link 클릭 기본세팅 */
 a:link,
 a:visited,
 a:hover,
